--- a/src/Data/Data.css
+++ b/src/Data/Data.css
@@ -81,8 +81,8 @@ body{
   }
   
   .container .card .content h3 {
-      font-size: 1.8em;
-      font-family: 'Times New Roman', Times, serif;
+      font-size: 3.5em;
+      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
       color: #fff;
       z-index: 1;
   }
